--- a/anand.html
+++ b/anand.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
 	<meta name="theme-color" content="#2196F3">
-	<title>FlopCoders</title>
+	<title>FlopCoders|Anand Jhunjhunwala</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="min/plugin-min.css">
 	<link rel="stylesheet" type="text/css" href="min/custom-min.css">
@@ -23,16 +23,16 @@
 				<ul class="right hide-on-med-and-down">
 					<li><a href="#home">Home</a></li>
 					<li><a href="#about">About</a></li>
-					<li><a href="#team">Team Members</a></li>
+					<li><a href="skills">Skills</a></li>
 					<li><a href="#projects">Projects</a></li>
-					<li><a href="#contact">Contact Us</a></li>
+					<li><a href="#contact">Contact</a></li>
 				</ul>
 				<ul id="nav-mobile" class="side-nav">
 					<li class="active"><a href="#home">Home</a></li>
 					<li><a href="#about">About</a></li>
-					<li><a href="#team">Team Members</a></li>
+					<li><a href="#skills">Skills</a></li>
 					<li><a href="#projects">Projects</a></li>
-					<li><a href="#contact">Contact Us</a></li>
+					<li><a href="#contact">Contact</a></li>
 				</ul>
 				<a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
 			</div>
@@ -43,7 +43,7 @@
 
 	<div id="about" class="section no-pad-bot white scrollspy"></div>
 
-	<div id="team" class="scrollspy"></div>
+	<div id="skills" class="scrollspy"></div>
 
 	<div id="projects" class="scrollspy"></div>
 
