--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 <body>
 
+	<h1>Welcome to FlopCoders</h1>
 	<div class="about">Start</div>
 	
 	<script src="min/custom-min.js"></script>
