Changes in index file and the CSS files

--- a/index.html
+++ b/index.html
@@ -20,6 +20,38 @@
 	<h1>Welcome to FlopCoders</h1>
 	<div class="about">Start</div>
 	
+	<div class="navbar-fixed">
+		<nav role="navigation">
+			<div class="nav-wrapper">
+				<ul class="right hide-on-med-and-down">
+					<li><a href="#home">Home</a></li>
+					<li><a href="#about">About</a></li>
+					<li><a href="#team">Team Members</a></li>
+					<li><a href="#projects">Projects</a></li>
+					<li><a href="#contact">Contact Us</a></li>
+				</ul>
+				<ul id="nav-mobile" class="side-nav">
+					<li class="active"><a href="#home">Home</a></li>
+					<li><a href="#about">About</a></li>
+					<li><a href="#team">Team Members</a></li>
+					<li><a href="#projects">Projects</a></li>
+					<li><a href="#contact">Contact Us</a></li>
+				</ul>
+				<a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
+			</div>
+		</nav>
+	</div>
+
+	<div id="home" class="scrollspy"></div>
+
+	<div id="about" class="section no-pad-bot white scrollspy"></div>
+
+	<div id="team" class="scrollspy"></div>
+
+	<div id="projects" class="scrollspy"></div>
+
+	<div id="contact" class="scrollspy"></div>
+	
 	<script src="min/custom-min.js"></script>
 	<script src="lugin-min.js"></script>
 	<script src="js/materialize.js"></script>
